--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -316,3 +316,17 @@
     description={Mechanizm przechowywania danych w celu przyspieszenia ich ponownego odczytu}
 }
 
+\newglossaryentry{jvm}{
+    name={JVM},
+    description={(ang. \textit{Java Virtual Machine}); maszyna wirtualna oraz środowisko do wykonywania kodu bajtowego Javy.}
+}
+
+\newglossaryentry{spring-framework}{
+    name={Spring Framework},
+    description={TODO}
+}
+
+\newglossaryentry{convention-over-configuration}{
+    name={Convention Over Configuration},
+    description={Zasada programowania polegająca na przyjmowaniu domyślnych, bazowych regół, zamiast ręcznego implementowania konfiguracji.}
+}
