--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -452,14 +452,6 @@
     działających „na żywo”}
 }
 
-\newglossaryentry{react-query}
-{
-    name={React Query},
-    description={Dawna nazwa biblioteki TanStack Query. Biblioteka dla Reacta
-    wspierająca pobieranie, cachowanie i synchronizację danych z API oraz obsługę
-    stanów ładowania i błędów w komponentach}
-}
-
 \newglossaryentry{docker-compose}
 {
     name={Docker Compose},
@@ -485,15 +477,41 @@
 
 \newglossaryentry{prz2}
 {
-    name={PRZ 1},
+    name={PRZ 2},
     description={Przedmiot realizowany na 7. semestrze studiów, prowadzony w przypadku zespołu projektowego przez mgr. inż. Adama Urbanowicza. W ramach przedmiotu
-    dokońćzono prace nad pracą inżynierską. Pan Adam Ubranowicz jako promotor doradzał zespołowi projektowemu.}
+    dokończono prace nad pracą inżynierską. Pan Adam Urbanowicz jako promotor doradzał zespołowi projektowemu.}
 }
 
 \newglossaryentry{psem}
 {
     name={PSEM},
     description={Przedmiot realizowany na 7. semestrze studiów, prowadzony w przypadku zespołu projektowego przez dr. inż. Marka Bednarczyka. W ramach przedmiotu
-    dokończono wytwarzaniae dokumentacji.}
+    dokończono wytwarzanie dokumentacji.}
 }
 
+\newglossaryentry{spa}
+{
+    name={SPA},
+    description={SPA (Single Page Application) to aplikacja webowa, w której cała strona ładuje się raz,
+    a późniejsze zmiany widoku odbywają się dynamicznie po stronie przeglądarki bez pełnego przeładowania strony.}
+}
+
+\newglossaryentry{routing}
+{
+    name={routing},
+    description={Routing w \gls{spa} to warstwa w kliencie odpowiedzialna za zarządzanie stanem “aktualnej strony” na podstawie URL-a,
+    zwykle z wykorzystaniem historii przeglądarki,
+    tak aby interfejs reagował na zmianę ścieżki bez przeładowań z serwera.}
+}
+
+\newglossaryentry{integraion-tests}
+{
+    name={testy integracyjne},
+    description={Testy sprawdzające, czy połączone ze sobą moduły/komponenty systemu współpracują ze sobą poprawnie w warunkach zbliżonych do rzeczywistego działania aplikacji.}
+}
+
+\newglossaryentry{unit-tests}
+{
+    name={testy jednostkowe},
+    description={Testy sprawdzające poprawność działania pojedynczych, małych fragmentów kodu (np. funkcji, metod, klas) w izolacji od reszty systemu.}
+}
