--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -515,3 +515,9 @@
     name={testy jednostkowe},
     description={Testy sprawdzające poprawność działania pojedynczych, małych fragmentów kodu (np. funkcji, metod, klas) w izolacji od reszty systemu.}
 }
+
+\newglossaryentry{jakarta-validation}
+{
+    name={jakarta validation},
+    description={Jakarta Validation to specyfikacja (i zestaw adnotacji, typu @NotNull, @Size itd.) służąca do automatycznego sprawdzania poprawności danych w aplikacjach stworzonych za pomocą Java/Jakarta EE/Spring, np. przy walidacji pól DTO, encji czy parametrów metod.}
+}
