--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -318,7 +318,7 @@
 
 \newglossaryentry{jvm}{
     name={JVM},
-    description={(ang. \textit{Java Virtual Machine}); maszyna wirtualna oraz środowisko do wykonywania kodu bajtowego Javy.}
+    description={(ang. \textit{Java Virtual Machine}); maszyna wirtualna oraz środowisko do wykonywania kodu bajtowego Javy}
 }
 
 \newglossaryentry{spring-framework}{
@@ -328,5 +328,18 @@
 
 \newglossaryentry{convention-over-configuration}{
     name={Convention Over Configuration},
-    description={Zasada programowania polegająca na przyjmowaniu domyślnych, bazowych regół, zamiast ręcznego implementowania konfiguracji.}
+    description={Zasada programowania polegająca na przyjmowaniu domyślnych, bazowych regół, zamiast ręcznego implementowania konfiguracji}
+}
+
+\newglossaryentry{dom}{
+    name={DOM},
+    description={(ang. \textit{Document Object Model}); interfejs reprezentacji stron internetowych jako węzły i obiekty.
+    Dzięki temu skrypty, np. napisane w JavaScript, mogą wchodzić w interakcje ze stroną
+    (np. modyfikować strukturę, treść lub styl)}
+}
+
+\newglossaryentry{spa}{
+    name={SPA},
+    description={(ang. \textit{Single Page Application}); aplikacja webowa, która zawiera jeden plik HTML.
+    Po jednorazowym wczytaniu jej zawartość jest zmieniana bez ponownego przeładowania}
 }
