--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -10,6 +10,8 @@
 \usepackage{enumitem} % dla lepszej kontroli list
 \usepackage[utf8]{inputenc}
 \usepackage[table]{xcolor} % kolory w tabelach
+\usepackage[T1]{fontenc}
+\usepackage{longtable}
 
 %nowe pakiety do tabel:
 \usepackage{booktabs}
