--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -322,3 +322,8 @@
     description={Mechanizm przechowywania danych w celu przyspieszenia ich ponownego odczytu}
 }
 
+
+\newglossaryentry{query-params}{
+    name={Parametry zapytania (query params)},
+    description={Pary \texttt{klucz=wartość} przekazywane w części adresu URL po znaku zapytania \texttt{?}, służące m.in. do filtrowania, sortowania, paginacji wyników lub przekazywania dodatkowych opcji żądania do serwera, np. \texttt{?param1=val1\&param2=val2}}
+}
