--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -39,291 +39,337 @@
     description={Skrót od \textit{JSON Web Token}. Standard służący do bezpiecznego przekazywania informacji między stronami w formacie JSON, często używany w procesach autoryzacji użytkowników}
 }
 
+\newglossaryentry{oauth}
+{
+    name={OAuth},
+    description={Standard autoryzacji umożliwiający aplikacjom zewnętrznym uzyskanie dostępu do zasobów użytkownika bez przekazywania jego hasła, często wykorzystywany przy logowaniu za pomocą dostawców takich jak Google czy GitHub}
+}
+
 \newglossaryentry{cicd}
 {
     name={CI/CD},
     description={Skrót od \textit{Continuous Integration/Continuous Deployment}. Praktyka programistyczna polegająca na automatyzacji procesu budowania, testowania i wdrażania oprogramowania}
 }
 
+\newglossaryentry{github}
+{
+    name={GitHub},
+    description={Platforma hostingu repozytoriów \textit{Git} w chmurze, oferująca m.in. pull requesty, system zgłoszeń (issues), zarządzanie wersjami oraz integrację z narzędziami CI/CD}
+}
+
+\newglossaryentry{jira}
+{
+    name={Jira},
+    description={Narzędzie firmy Atlassian do zarządzania projektami i zadaniami, szeroko stosowane w metodykach zwinnych. Umożliwia pracę z epikami, taskami, podtaskami oraz tablicami Scrum i Kanban}
+}
+
+\newglossaryentry{spring-boot}
+{
+    name={Spring Boot},
+    description={Framework w ekosystemie Spring dla języka Java, ułatwiający tworzenie aplikacji backendowych dzięki automatycznej konfiguracji, wbudowanemu serwerowi aplikacyjnemu oraz zestawowi gotowych starterów}
+}
+
+\newglossaryentry{spring-security}
+{
+    name={Spring Security},
+    description={Moduł bezpieczeństwa w ekosystemie Spring odpowiedzialny za uwierzytelnianie i autoryzację użytkowników. Zapewnia obsługę różnych mechanizmów logowania, ról i uprawnień oraz integrację z różnymi źródłami danych}
+}
+
+\newglossaryentry{docker}
+{
+    name={Docker},
+    description={Platforma do konteneryzacji aplikacji. Pozwala uruchamiać oprogramowanie w lekkich, izolowanych kontenerach tworzonych na podstawie obrazów, co upraszcza wdrażanie i utrzymanie spójnego środowiska}
+}
+
+\newglossaryentry{cors}
+{
+    name={CORS},
+    description={Skrót od \textit{Cross-Origin Resource Sharing}. Mechanizm bezpieczeństwa w przeglądarkach, który kontroluje, czy aplikacja z jednej domeny może wykonywać zapytania HTTP do serwera w innej domenie; konfigurowany za pomocą nagłówków HTTP}
+}
+
+\newglossaryentry{http-only-cookie}
+{
+    name={Ciasteczko HttpOnly},
+    description={Ciasteczko HTTP ustawione z flagą \texttt{HttpOnly}, dzięki czemu nie jest dostępne z poziomu JavaScriptu. Zmniejsza ryzyko kradzieży tokenów (np. JWT) w przypadku ataków typu XSS}
+}
+
+\newglossaryentry{tailwind-css}
+{
+    name={Tailwind CSS},
+    description={Framework CSS typu \textit{utility-first}, dostarczający gotowe klasy narzędziowe do określania wyglądu (kolory, odstępy, layout). Umożliwia szybkie prototypowanie i spójne stylowanie komponentów bez pisania rozbudowanych arkuszy CSS}
+}
+
+\newglossaryentry{prettier}
+{
+    name={Prettier},
+    description={Narzędzie do automatycznego formatowania kodu (np. JavaScript, TypeScript, CSS, HTML). Narzuca spójny styl formatowania, zastępując ręczne ustawianie wcięć i łamań linii}
+}
+
+\newglossaryentry{eslint}
+{
+    name={ESLint},
+    description={Statyczny analizator kodu JavaScript/TypeScript. Umożliwia wykrywanie błędów, niespójności stylu oraz potencjalnych problemów poprzez zestaw reguł, które można dostosować do projektu}
+}
+
+\newglossaryentry{tanstack-query}
+{
+    name={TanStack Query},
+    description={Biblioteka do obsługi zapytań do serwera i cachowania danych w aplikacjach frontendowych (m.in. React). Ułatwia zarządzanie stanem danych z backendu: pobieranie, odświeżanie, invalidację i obsługę błędów}
+}
+
+\newglossaryentry{leaflet}
+{
+    name={Leaflet},
+    description={Lekka biblioteka JavaScript do tworzenia interaktywnych map w przeglądarce, często używana z danymi z OpenStreetMap. Umożliwia dodawanie znaczników, warstw oraz obsługę interakcji użytkownika}
+}
+
+\newglossaryentry{e2e-tests}
+{
+    name={Testy E2E},
+    description={Testy \textit{end-to-end}, które sprawdzają działanie systemu od strony użytkownika, przechodząc przez wszystkie warstwy aplikacji (frontend, backend, baza danych) i symulując rzeczywiste scenariusze użycia}
+}
+
+\newglossaryentry{dto}
+{
+    name={DTO},
+    description={Skrót od \textit{Data Transfer Object}. Prosty obiekt przenoszący dane między warstwami systemu lub między usługami. Zawiera pola danych, zazwyczaj bez logiki biznesowej}
+}
+
+\newglossaryentry{modal}
+{
+    name={Modal},
+    description={Okno dialogowe (okno modalne), które pojawia się na wierzchu interfejsu i blokuje interakcję z resztą aplikacji, dopóki użytkownik go nie zamknie. Służy do prezentowania ważnych komunikatów lub formularzy}
+}
+
+\newglossaryentry{skeleton-loader}
+{
+    name={Skeleton loader},
+    description={Wzorzec prezentowania stanu ładowania, w którym zamiast klasycznego „spinnera” wyświetlane są szare prostokąty imitujące docelowy układ treści. Poprawia subiektywne odczucie szybkości działania aplikacji}
+}
+
+\newglossaryentry{z-index}
+{
+    name={z-index},
+    description={Właściwość CSS określająca kolejność nakładania się elementów (oś Z). Wyższa wartość powoduje wyświetlenie elementu „nad” elementami o niższych wartościach}
+}
+
+\newglossaryentry{intersection-observer}
+{
+    name={Intersection Observer},
+    description={API przeglądarkowe umożliwiające reagowanie na momenty, gdy dany element pojawia się w polu widzenia użytkownika (viewport) lub opuszcza je. Wykorzystywane m.in. do implementacji \gls{infinite-scroll} i lazy loadingu}
+}
+
+\newglossaryentry{latex}
+{
+    name={LaTeX},
+    description={System składu tekstu wykorzystywany do przygotowywania profesjonalnych dokumentów technicznych i naukowych. Umożliwia precyzyjne formatowanie, zarządzanie odwołaniami, bibliografią i wzorami matematycznymi}
+}
+
 \newglossaryentry{commit}
 {
     name={Commit},
-    description={Zapis zmian w repozytorium systemu kontroli wersji, który dokumentuje stan projektu w określonym momencie}
-}
-
-\newglossaryentry{push}
-{
-    name={Push},
-    description={Operacja w systemie kontroli wersji polegająca na wysłaniu lokalnych zmian (commitów) do zdalnego repozytorium}
-}
-
+    @@ -60,7 +180,7 @@
 \newglossaryentry{spot}
 {
     name={Spot},
-    description={Spotkanie zespołu projektowego, zazwyczaj krótkie i regularne, służące omówieniu postępów prac, problemów oraz planów na najbliższy okres}
+    description={Potencjalne miejsce do latania dronem, zaznaczone na mapie.}
 }
 
 \newglossaryentry{sidebar}
-{
-    name={Sidebar},
-    description={Boczny panel w interfejsie użytkownika, zawierający menu nawigacyjne lub dodatkowe opcje funkcjonalne aplikacji}
-}
-
-\newglossaryentry{design}
-{
-    name={Design},
-    description={Etap lub proces projektowania wyglądu i funkcjonalności aplikacji, obejmujący zarówno aspekty wizualne, jak i użytkowe (UX/UI)}
-}
-
-\newglossaryentry{folder-by-type}
-{
-    name={Folder by type},
-    description={Sposób organizowania struktury katalogów w projekcie, w którym pliki są grupowane według rodzaju (typu) zasobu, a nie według funkcjonalności. Na przykład wszystkie komponenty trafiają do jednego folderu, wszystkie style do innego itd}
-}
-
-\newglossaryentry{biblioteka}
-{
-    name={Biblioteka},
-    description={Zewnętrzny lub wewnętrzny zestaw gotowych funkcji, klas, komponentów lub modułów, który można wielokrotnie wykorzystywać w projekcie zamiast pisać wszystko od zera}
-}
-
-\newglossaryentry{protected-route}
-{
-    name={Protected route},
-    description={Trasa w aplikacji, do której dostęp jest ograniczony, zwykle tylko dla zalogowanych użytkowników lub użytkowników z odpowiednimi uprawnieniami. Jeżeli użytkownik nie spełnia warunków, jest przekierowywany (np. na stronę główną)}
-}
-
-\newglossaryentry{wzorzec}
-{
-    name={Wzorzec},
-    description={Powtarzalne, sprawdzone rozwiązanie typowego problemu projektowego lub architektonicznego. Wzorzec opisuje \emph{jak} coś organizować lub implementować, żeby było czytelne, skalowalne i łatwe w utrzymaniu}
-}
-
-\newglossaryentry{DAD_LLC}
-{
-    name={Disciplined Agile Delivery - Lean Life Cycle},
-    description={
-        Disciplined Agile Delivery w wariancie Lean Life Cycle to sposób prowadzenia projektu,
-        który łączy elastyczność Agile z przewidywalnością Waterfalla,
-        ale bez stałych sprintów — praca toczy się w ciągłym przepływie.
-        Na starcie zakłada mocniejszą fazę przygotowawczą: doprecyzowanie zakresu,
-        szkic architektury, identyfikację ryzyk i kryteria jakości.
-        W realizacji następuje ciągłe doprecyzowywanie wymagań
-        i backlogu, oparte na regularnym feedbacku udziałowców.
-        Całość opiera się na praktykach Lean oraz lekkim governance:
-        code review i regularnych przeglądach postępów.
-    }
-}
-
-\newglossaryentry{operator-drona}
-{
-    name={Operator drona},
-    description={Osoba lub podmiot będący właścicielem floty dronów. Może posiadać jeden lub wiele dronów. Droniarz rekreacyjny jest zazwyczaj jednocześnie operatorem floty oraz pilotem.}
-}
-
-\newglossaryentry{pilot-drona}
-{
-    name={Pilot drona},
-    description={Osoba posiadająca uprawnienia do pilotowania drona (jeżeli są wymagane) i wykonująca loty dronem. Droniarz rekreacyjny jest zazwyczaj jednocześnie pilotem oraz operatorem floty.}
-}
-
-\newglossaryentry{droniarz}
-{
-    name={Droniarz},
-    plural={droniarze},
-    description={Potoczne określenie osoby, która jest jednocześnie pilotem oraz operatorem drona. Zwykle entuzjasta dronów.}
-}
-
-\newglossaryentry{PANSA}
-{
-    name={PANSA},
-    description={
-        Polish Air Navigation Services Agency, pol. Polska Agencja Żeglugi Powietrznej.
-        Instytucja ta zapewnia m.in. mapę z zaznaczonymi strefami lotów.
-        Każda strefa ma swoje właściwości prawne.
-    }
-}
-
-\newglossaryentry{pilot-fpv}
-{
-    name={Pilot FPV},
-    description={Pilot drona latający w trybie \textit{First Person View} (FPV),
-    korzystający z gogli przekazujących obraz z kamery pokładowej.}
-}
-
-\newglossaryentry{droniarz-fpv}
-{
-    name={Droniarz FPV},
-    description={\glsentrydesc{pilot-fpv}}
-}
-
-\newglossaryentry{droniarz-foto-video}
-{
-    name={Droniarz foto/video},
-    description={Pilot wykorzystujący drony fotograficzne/filmowe do rejestracji materiałów wizualnych
-    (zdjęcia, wideo), zwykle z naciskiem na stabilizację i jakość obrazu.},
-    user1={droniarzem foto/video}
-}
-
-\newglossaryentry{droniarz-foto}
-{
-    name={Droniarz foto},
-    description={\glsentrydesc{droniarz-foto-video}}
-}
-
-\newglossaryentry{droniarz-fotograf}
-{
-    name={Droniarz fotograf},
-    description={\glsentrydesc{droniarz-foto-video}}
-}
-
-\newglossaryentry{pilot-foto}
-{
-    name={Pilot foto},
-    description={\glsentrydesc{droniarz-foto-video}}
-}
-
-\newglossaryentry{azure-blob-storage}
-{
-    name={Azure Blob Storage},
-    description={Usługa magazynu obiektowego w chmurze Microsoft Azure do przechowywania
-    nieustrukturyzowanych danych (\textit{blobs}) takich jak obrazy, wideo i pliki.
-    Udostępnia kontenery, warstwy dostępu, wersjonowanie oraz tokeny SAS; często używana
-    do hostowania multimediów w aplikacjach webowych.}
-}
-
-\newglossaryentry{stan}{
-    name={Stan},
-    description={Aktualny zestaw danych przechowywanych przez aplikację lub komponent, na podstawie którego renderowany jest interfejs użytkownika. Stan może być lokalny (utrzymywany w pojedynczym komponencie) albo globalny (wspólny dla wielu komponentów).}
-}
-
-\newglossaryentry{ui}{
-    name={UI},
-    description={Interfejs użytkownika (ang. \textit{User Interface}); warstwa prezentacji odpowiedzialna za sposób wyświetlania danych oraz interakcji użytkownika z aplikacją.}
-}
-
-\newglossaryentry{hook}{
-    name={Hook (React)},
-    description={Prosta funkcja w React, która „dodaje” możliwości do elementu interfejsu — np. pozwala mu coś zapamiętać (stan) albo zrobić coś po zmianie/załadowaniu. Wszystkie hooki zaczynają się od \texttt{use...} (np. \texttt{useState}, \texttt{useEffect}).}
-}
-
-\newglossaryentry{css}{
-    name={CSS},
-    description={Kaskadowe arkusze stylów (Cascading Style Sheets) — język opisu prezentacji dokumentów (np. HTML). Definiuje wygląd interfejsu: układ, kolory, typografię, odstępy, animacje i zachowania responsywne, oddzielając warstwę treści od warstwy prezentacji.}
-}
-
-\newglossaryentry{responsywnosc}{
-    name={Responsywność},
-    description={Określenie związane z projektowaniem responsywnym (Responsive Web Design, RWD), czyli dostosowywaniem interfejsu do różnych rozmiarów i parametrów ekranów. Obejmuje m.in. elastyczne siatki, grafiki i \gls{media-queries}, tak aby układ i czytelność były zachowane na telefonach, tabletach i desktopach.}
-}
-
-\newglossaryentry{props}{
-    name={Props},
-    description={Właściwości przekazywane do komponentu React przez komponent nadrzędny; służą do konfiguracji i przekazywania danych. Powinny być traktowane jako tylko do odczytu (read-only) wewnątrz komponentu potomnego.}
-}
-
-\newglossaryentry{react}{
-    name={React},
-    description={Biblioteka JavaScript do budowy interfejsów użytkownika w oparciu o komponenty deklaratywne i wirtualny DOM. Zapewnia jednokierunkowy przepływ danych oraz zarządzanie stanem komponentów.}
-}
-
-\newglossaryentry{type-script}{
-    name={TypeScript},
-    description={Rozszerzenie do języka JavaScript dodający statyczne typowanie, interfejsy i narzędzia do większych projektów. Kompiluje się do czystego JavaScript, ułatwiając wykrywanie błędów w czasie kompilacji i refaktoryzację.}
-}
-
-\newglossaryentry{redux}{
-    name={Redux},
-    description={Biblioteka do przewidywalnego zarządzania stanem aplikacji. Opiera się na jednym \emph{store}, akcjach i czystych \emph{reducerach}, promuje niemutowalność i jednokierunkowy przepływ danych. Często używana z Reactem, ale niezależna od niego.}
-}
-
-\newglossaryentry{media-queries}{
-    name={Media queries},
-    description={Konstrukcja CSS pozwalająca stosować reguły stylów w zależności od cech urządzenia/okna (np. szerokości ekranu, orientacji, preferencji użytkownika). Podstawa responsywnego projektowania (\emph{responsive design}).}
-}
-
-\newglossaryentry{backlog}{
-    name={Backlog},
-    description={Lista zadań, które należy wykonać w ramach projektu, używane w metodykach zwinnych.}
-}
-
-\newglossaryentry{tablica_kanban}{
-    name={Tablica Kanban},
-    description={Narzędzie do zarządzania przepływem pracy, które pomaga zespołom śledzić zadania oraz ich postępy.
-    Składa się z kolumn reprezentujących stan etapu prac, na przykład „Do zrobienia” lub „W trakcie”.}
-}
-
-\newglossaryentry{ide}{
-    name={IDE},
-    description={(ang. \textit{integrated development environment}); to zintegrowane środowisko programistyczne, służące do
-    tworzenia, modyfikowania, testowania i konserwacji oprogramowania}
-}
-
-\newglossaryentry{api}{
-    name={API},
-    description={(ang. \textit{application programming interface}); zbiór reguł i operacji do komunikacji z oprogramowaniem.}
-}
-
-\longnewglossaryentry{rest_api}{
-    name={REST API}
-}{
-    Architektura budowania usług sieciowych komunikujących się poprzez metody protokołu HTTP (GET, PUT, POST, DELETE, PATCH).
-    Wymiana danych występuje często w formacie JSON lub XML.
-    \\REST API musi spełniać następujące reguły:
-    \begin{enumerate}[nosep]
-        \item \textbf{Rozdzielenie klient-serwer} \textemdash \space klient i serwer są od siebie niezależne, komunikują się poprzez interfejs.
-        \item \textbf{Bezstanowość} \textemdash \space każde żądanie przez klienta zawiera wszystkie informacje niezbędne do jego obsłużenia.
-        Po otrzymaniu żądania serwer nie przechowuje o nim żadnych informacji.
-        \item \textbf{Buforowalność (cache)} \textemdash \space odpowiedzi z API powinny informować, czy dane można cache’ować.
-        Jeśli tak, to przy kolejnym żądaniu mogą być zwrócone z cache’a.
-        \item \textbf{Jednolity interfejs}:
-        \begin{itemize}[nosep]
-            \item \textbf{Identyfikacja zasobów} \textemdash \space każdy zasób musi być jednoznacznie zidentyfikowany w interakcji klient-serwer.
-            \item \textbf{Manipulacja zasobów poprzez reprezentację} \textemdash \space po otrzymaniu reprezentacji klient może zmienić stan zasobu przesyłając zmodyfikowaną reprezentację.
-            \item \textbf{Samoopisujące się wiadomości} \textemdash \space każde żądanie i odpowiedź powinny zawierać informacje do jego poprawnego przetworzenia.
-            \item \textbf{Hypermedia jako silnik stanu aplikacji (HATEOAS)} \textemdash \space po otrzymaniu odpowiedzi klient powinien móc dynamicznie poznać inne interakcje przez linki.
-        \end{itemize}
-        \item \textbf{Warstwowość} \textemdash \space klient nie wie czy komunikuje się bezpośrednio z serwerem, czy poprzez pośrednika
-        (np. proxy) oraz nie wie z czym komunikuje się obsługująca go warstwa.
-        \item \textbf{Kod na żądanie (opcjonalnie)} \textemdash \space serwer może przesłać fragment kodu, który zostanie wykonany przez klienta.
-    \end{enumerate}
-}
-
-\newglossaryentry{uml}{
-    name={UML},
-    description={(ang. \textit{Unified Modeling Language});
-    graficzny język wizualizacji, specyfikowania oraz dokumentowania składników systemów informatycznych. }
-}
-
-\newglossaryentry{bpmn}{
-    name={BPMN},
-    description={(ang. \textit{Business Process Model and Notation});
-    standardowa notacja graficzna, która umożliwia szczegółowe przedstawienie i dokumentowanie procesów biznesowych.}
+@@ -300,7 +420,197 @@
+description={(ang. \textit{Business Process Model and Notation});
+standardowa notacja graficzna, która umożliwia szczegółowe przedstawienie i dokumentowanie procesów biznesowych.}
 }
 
 \newglossaryentry{infinite-scroll}{
     name={Infinite scroll},
     description={Wzorzec interfejsu użytkownika, w którym kolejne porcje treści są automatycznie doładowywane podczas przewijania strony w dół, zamiast być podzielone na odrębne, ręcznie przełączane strony}
 }
-
-\newglossaryentry{moscow}{
-    name={MoSCoW},
-    description={Metoda nadawania priorytetów wymaganiom, wyróżniająca kategorie:
-    \emph{Must have}, \emph{Should have}, \emph{Could have} oraz
-    \emph{Won't have this time}}
+\newglossaryentry{cdn}
+{
+    name={CDN},
+    description={Skrót od \textit{Content Delivery Network}. Rozproszona sieć serwerów
+    służąca do szybkiego dostarczania statycznych zasobów (np. obrazów, arkuszy CSS,
+    skryptów JavaScript) z węzłów geograficznie najbliższych użytkownikowi, co zmniejsza
+    opóźnienia i odciąża serwer aplikacji}
 }
-\newglossaryentry{redis}{
+
+\newglossaryentry{react-maplibre}
+{
+    name={React-MapLibre},
+    description={Otwartoźródłowa biblioteka do renderowania interaktywnych map
+    wektorowych w przeglądarce, rozwijana jako niezależna kontynuacja Mapbox GL JS.
+    Umożliwia wyświetlanie kafelków mapowych, znaczników i warstw z danymi
+    geoprzestrzennymi}
+}
+
+\newglossaryentry{websocket}
+{
+    name={WebSocket},
+    description={Protokół komunikacyjny umożliwiający dwukierunkową komunikację
+    w czasie rzeczywistym między przeglądarką a serwerem po pojedynczym,
+    utrzymywanym połączeniu TCP. Często wykorzystywany m.in. w czatach i aplikacjach
+    działających w czasie rzeczywistym.}
+}
+
+\newglossaryentry{docker-compose}
+{
+    name={Docker Compose},
+    description={Narzędzie do definiowania i uruchamiania wielokontenerowych aplikacji \gls{docker}
+    za pomocą pliku konfiguracyjnego (np. \texttt{docker-compose.yml}). Umożliwia jednoczesne
+    uruchamianie powiązanych usług (np. \gls{backend}, baza danych, usługi pomocnicze) jednym poleceniem}
+}
+
+\newglossaryentry{pro}
+{
+    name={PRO},
+    description={Przedmiot realizowany na 5. semestrze studiów, prowadzony przez dr. inż. Martę Łabudę. W ramach przedmiotu
+    wybrano temat projektu oraz
+    wytworzono wstępną dokumentację projektu w tym m.in. wymagania.}
+}
+
+\newglossaryentry{prz1}
+{
+    name={PRZ 1},
+    description={Przedmiot realizowany na 6. semestrze studiów, prowadzony w przypadku zespołu projektowego przez mgr. inż. Adama Urbanowicza. W ramach przedmiotu
+    wytworzono projekt interfejsu użytkownika.}
+}
+
+\newglossaryentry{prz2}
+{
+    name={PRZ 2},
+    description={Przedmiot realizowany na 7. semestrze studiów, prowadzony w przypadku zespołu projektowego przez mgr. inż. Adama Urbanowicza. W ramach przedmiotu
+    dokończono prace nad pracą inżynierską. Pan Adam Urbanowicz jako promotor doradzał zespołowi projektowemu.}
+}
+
+\newglossaryentry{psem}
+{
+    name={PSEM},
+    description={Przedmiot realizowany na 7. semestrze studiów, prowadzony w przypadku zespołu projektowego przez dr. inż. Marka Bednarczyka. W ramach przedmiotu
+    dokończono wytwarzanie dokumentacji.}
+}
+
+\newglossaryentry{spa}
+{
+    name={SPA},
+    description={SPA (Single Page Application) to aplikacja webowa, w której cała strona ładuje się raz,
+    a późniejsze zmiany widoku odbywają się dynamicznie po stronie przeglądarki bez pełnego przeładowania strony.}
+}
+
+\newglossaryentry{routing}
+{
+    name={routing},
+    description={Routing w \gls{spa} to warstwa w kliencie odpowiedzialna za zarządzanie stanem “aktualnej strony” na podstawie URL-a,
+    zwykle z wykorzystaniem historii przeglądarki,
+    tak aby interfejs reagował na zmianę ścieżki bez przeładowań z serwera.}
+}
+
+
+
+\newglossaryentry{unit-tests}
+{
+    name={testy jednostkowe},
+    description={Testy sprawdzające poprawność działania pojedynczych, małych fragmentów kodu (np. funkcji, metod, klas) w izolacji od reszty systemu.}
+}
+
+\newglossaryentry{jakarta-validation}
+{
+    name={jakarta validation},
+    description={Jakarta Validation to specyfikacja (i zestaw adnotacji, typu @NotNull, @Size itd.) służąca do automatycznego sprawdzania poprawności danych w aplikacjach stworzonych za pomocą Java/Jakarta EE/Spring, np. przy walidacji pól DTO, encji czy parametrów metod.}
+}
+\newglossaryentry{intellij-idea}
+{
+    name={IntelliJ IDEA},
+    description={Zintegrowane środowisko programistyczne (IDE) firmy JetBrains, szeroko stosowane przy tworzeniu aplikacji backendowych w ekosystemie Spring. Oferuje m.in. podpowiedzi składni, refaktoryzację kodu, debugger oraz integrację z systemami kontroli wersji}
+}
+
+\newglossaryentry{dockerfile}
+{
+    name={Dockerfile},
+    description={Plik tekstowy zawierający instrukcje opisujące, jak zbudować obraz Dockera (jakiej podstawy użyć, jakie pliki skopiować, jakie polecenia uruchomić). Na jego podstawie narzędzie Docker tworzy gotowy obraz kontenera}
+}
+
+\newglossaryentry{redis}
+{
     name={Redis},
-    description={Baza danych typu klucz–wartość wykorzystywana jako szybka warstwa \glslink{cache}{cache}}
+    description={Szybka baza danych typu klucz–wartość przechowywana głównie w pamięci operacyjnej. Często wykorzystywana jako pamięć podręczna (cache), magazyn sesji lub prosty mechanizm komunikatów między usługami}
 }
 
-\newglossaryentry{cache}{
-    name={Cache},
-    description={Mechanizm przechowywania danych w celu przyspieszenia ich ponownego odczytu}
+\newglossaryentry{gif}
+{
+    name={GIF},
+    description={Format graficzny \textit{Graphics Interchange Format} obsługujący krótkie, zapętlone animacje. W aplikacjach czatowych wykorzystywany do wysyłania „reakcji” w postaci ruchomych obrazków}
+}
+
+\newglossaryentry{emoji}{
+    name={emoji},
+    description={Małe graficzne ikonki używane do wyrażania emocji
+    lub pojęć w komunikacji cyfrowej (np. uśmiechnięta buźka, kciuk w górę,
+    symbol serca).}
 }
 
 
-\newglossaryentry{query-params}{
-    name={Parametry zapytania (query params)},
-    description={Pary \texttt{klucz=wartość} przekazywane w części adresu URL po znaku zapytania \texttt{?}, służące m.in. do filtrowania, sortowania, paginacji wyników lub przekazywania dodatkowych opcji żądania do serwera, np. \texttt{?param1=val1\&param2=val2}}
+\newglossaryentry{url}
+{
+    name={URL},
+    description={Adres zasobu w internecie (ang. \textit{Uniform Resource Locator}), np. adres strony, widoku w aplikacji webowej lub konkretnego posta na forum}
+}
+
+\newglossaryentry{slug}
+{
+    name={Slug},
+    description={Przyjazny dla użytkownika fragment adresu URL, zwykle oparty na tytule (np. \texttt{/post/jak-zaczac-latac-dronem}), ułatwiający identyfikację treści i pozycjonowanie w wyszukiwarkach}
+}
+
+\newglossaryentry{tinymce}
+{
+    name={TinyMCE},
+    description={Popularny edytor \textit{rich text} osadzany w przeglądarce. Pozwala użytkownikowi formatować tekst (pogrubienia, listy, nagłówki, linki) w sposób przypominający klasyczny edytor tekstu, zapisując wynik zwykle w HTML}
+}
+
+\newglossaryentry{rich-text-editor}
+{
+    name={Rich text editor},
+    description={Edytor treści, który zamiast „surowego” tekstu umożliwia stosowanie formatowania (np. pogrubienie, kursywa, listy, nagłówki, linki), dzięki czemu użytkownik może tworzyć czytelne, sformatowane wpisy}
+}
+
+\newglossaryentry{tiptap}
+{
+    name={Tiptap},
+    description={Nowoczesny, rozszerzalny edytor \textit{rich text} dla aplikacji webowych oparty na silniku ProseMirror. Umożliwia budowanie rozbudowanych, modularnych edytorów treści, np. do postów na forum}
+}
+
+\newglossaryentry{integration-tests}
+{
+    name={Testy integracyjne},
+    description={Testy sprawdzające, czy połączone ze sobą moduły lub usługi współpracują poprawnie — na przykład czy warstwa backendowa poprawnie komunikuje się z bazą danych, warstwą sieciową i pozostałymi komponentami systemu}
+}
+\newglossaryentry{endpoint}
+{
+    name={endpoint},
+    description={Endpoint to konkretny adres (np. \gls{url}) i metoda protokołu HTTP
+    w \gls{api}, które razem odpowiadają za realizację jednej, dobrze zdefiniowanej
+    operacji (np. pobrania listy spotów, dodania komentarza, wyszukania spotów).}
+}
+
+\newglossaryentry{redux-slice}
+{
+    name={slice Redux},
+    description={Slice Redux to wydzielona część globalnego stanu w \gls{redux},
+    wraz z powiązanymi akcjami i reduktorami, odpowiedzialna za jeden obszar domeny
+    (np. konto użytkownika, czat, mapę czy listę znajomych).}
+}
+\newglossaryentry{jsoup}{
+    name={jsoup},
+    description={Biblioteka \textit{Java} do przetwarzania dokumentów HTML,
+    umożliwiająca parsowanie, przeszukiwanie i modyfikowanie struktury dokumentu
+    w sposób zbliżony do pracy z DOM-em i selektorami CSS.}
+}
+\newglossaryentry{paginacja}
+{
+    name={paginacja},
+    description={Mechanizm dzielenia dużych zbiorów danych
+    (np. list postów, wyników wyszukiwania, komentarzy)
+    na mniejsze strony, które są pobierane i wyświetlane stopniowo,
+    zamiast ładowania wszystkich elementów jednocześnie.}
 }
