--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -323,7 +323,10 @@
 
 \newglossaryentry{spring-framework}{
     name={Spring Framework},
-    description={TODO}
+    description={Framework, który służy do tworzenia aplikacji w Javie.
+    Zajmuje się między innymi ustawianiem konfiguracji oraz zarządzaniem zależnośćiami,
+    np.: wstrzykiwaniem (ang. \textit{Dependency Injection}), odwróceniem kontroli (ang. \textit{Inversion of Control}).
+    Oferuje wiele modułów wspierających, które ułatwiają rozwój projektów}
 }
 
 \newglossaryentry{convention-over-configuration}{
