--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -346,3 +346,9 @@
     description={(ang. \textit{Single Page Application}); aplikacja webowa, która zawiera jeden plik HTML.
     Po jednorazowym wczytaniu jej zawartość jest zmieniana bez ponownego przeładowania}
 }
+
+\newglossaryentry{wolumen}{
+    name={Wolumen},
+    description={To zarządzane przez Dockera magazyny danych dla kontenerów, które
+    są odizolowane od maszyny hosta.}
+}
