--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -361,6 +361,6 @@
 
 \newglossaryentry{wolumen}{
     name={Wolumen},
-    description={To zarządzane przez Dockera magazyny danych dla kontenerów, które
+    description={Zarządzane przez Dockera magazyny danych dla kontenerów, które
     są odizolowane od maszyny hosta.}
 }
