fix entire file

--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -24,6 +24,8 @@
 \newcolumntype{L}[1]{>{\raggedright\arraybackslash}p{#1}}
 
 \setlist[description]{leftmargin=0pt,labelindent=0pt}
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{3}
 
 
 \hypersetup{
