--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -614,3 +614,10 @@
     zamiast ładowania wszystkich elementów jednocześnie.}
 }
 
+\newglossaryentry{gantt-chart}
+{
+    name={diagram Gantta},
+    description={Graficzne narzędzie do planowania i monitorowania przebiegu projektu, przedstawiające zadania jako poziome paski na osi czasu wraz z ich początkiem, końcem oraz ewentualnymi zależnościami.}
+}
+
+
