--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -364,3 +364,9 @@
     description={Zarządzane przez Dockera magazyny danych dla kontenerów, które
     są odizolowane od maszyny hosta.}
 }
+
+\newglossaryentry{srp}{
+    name={Single Responsibilty Principle},
+    description={(tłum. \textit{Zasada Pojedynczej Odpowiedzialności}); zasada należąca do wytycznych SOLID.
+    Zgodnie z nią klasa lub funkcja powinna mieć dokładnie jeden powód do zmiany, czyli być odpowiedzalną za jedną rzecz}
+}
