--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -353,6 +353,37 @@
     description={Pary \texttt{klucz=wartość} przekazywane w części adresu URL po znaku zapytania \texttt{?}, służące m.in. do filtrowania, sortowania, paginacji wyników lub przekazywania dodatkowych opcji żądania do serwera, np. \texttt{?param1=val1\&param2=val2}}
 }
 
+\newglossaryentry{docker}{
+    name={Docker},
+    description={Platforma do konteneryzacji aplikacji wykorzystująca wirtualizację na poziomie systemu operacyjnego.
+    Umożliwia uruchamianie oprogramowania w lekkich, odizolowanych kontenerach wraz z wszystkimi zależnościami,
+    co ułatwia przenoszenie i powtarzalne odtwarzanie środowisk uruchomieniowych}
+}
+
+\newglossaryentry{docker-compose}{
+    name={Docker Compose},
+    description={Narzędzie służące do definiowania i uruchamiania aplikacji składających się z wielu kontenerów Docker.
+    Konfiguracja usług (m.in. obrazy, porty, wolumeny i sieci) opisywana jest w pliku YAML (np. \texttt{docker-compose.yml}),
+    a następnie uruchamiana jednym poleceniem}
+}
+
+\newglossaryentry{docker-hub}{
+    name={Docker Hub},
+    description={Publiczne repozytorium (rejestr) obrazów kontenerów Docker,
+    umożliwiające przechowywanie, udostępnianie oraz dystrybucję obrazów.
+    Użytkownicy mogą korzystać z oficjalnych obrazów przygotowanych przez społeczność
+    i dostawców oprogramowania lub publikować własne obrazy}
+}
+
+\newglossaryentry{kontener}{
+    name={kontener},
+    description={Lekka, odizolowana jednostka uruchomieniowa, w której umieszczana jest aplikacja wraz z jej zależnościami
+    (bibliotekami, konfiguracją itp.). Kontenery współdzielą jądro systemu operacyjnego, ale posiadają własną
+    przestrzeń procesów, systemu plików i sieci, co zapewnia powtarzalne i przenośne środowisko uruchomieniowe,
+    najczęściej zarządzane przez platformę taką jak \glslink{docker}{docker}}
+}
+
+
 \newglossaryentry{spa}{
     name={SPA},
     description={(ang. \textit{Single Page Application}); aplikacja webowa, która zawiera jeden plik HTML.
