--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -367,6 +367,21 @@
 
 \newglossaryentry{srp}{
     name={Single Responsibilty Principle},
-    description={(tłum. \textit{Zasada Pojedynczej Odpowiedzialności}); zasada należąca do wytycznych SOLID.
+    description={(tłum. \textit{Zasada Pojedynczej Odpowiedzialności}); zasada należąca do wytycznych \glslink{solid}{SOLID}.
     Zgodnie z nią klasa lub funkcja powinna mieć dokładnie jeden powód do zmiany, czyli być odpowiedzalną za jedną rzecz}
+}
+
+\newglossaryentry{solid}{
+    name={SOLID},
+    description={Mnemonik zdefiniowany przez Roberta C. Martina, zawierający 5 zasad projektowania,
+    które mają poprawić elastyczność i prostotę utrzymania oprogramowania.
+    \begin{itemize}
+        \item \textbf{S} \textendash \space Single Responsibilty Principle (tłum. \textit{Zasada Pojedynczej Odpowiedzialności})
+        \item \textbf{O} \textendash \space Open/Closed Principle (tłum. \textit{Zasada Otwarte/Zamknięte})
+        \item \textbf{L} \textendash \space Liskov Substitution Principle (tłum. \textit{Zasada Podstawienia Liskov})
+        \item \textbf{I} \textendash \space Interaface Segregation Principle (tłum. \textit{Zasada Segregacji Interfejsów})
+        \item \textbf{D} \textendash \space Dependency Inversion Principle (tłum. \textit{Zasada Odwrócenia Zależności})
+    \end{itemize}
+    Definicja została napisana na podstawie treści książki \cite{wzorce-projektowe}
+    }
 }
