--- a/book/engineer.tex
+++ b/book/engineer.tex
@@ -9,6 +9,7 @@
 \usepackage{minted}
 \usepackage{enumitem} % dla lepszej kontroli list
 \usepackage[utf8]{inputenc}
+\usepackage{pgfgantt}
 \usepackage[table]{xcolor} % kolory w tabelach
 \usepackage[T1]{fontenc}
 \usepackage{longtable}
@@ -17,7 +18,6 @@
 \usepackage{booktabs}
 \usepackage{array,ltablex}
 \keepXColumns
-
 %customowe rozmiary kolumn (do użytku ogolonego)
 \newcolumntype{C}[1]{>{\centering\arraybackslash}m{#1}}
 \newcolumntype{Y}{>{\hspace{0.6em}}X<{\hspace{0.6em}}}
