odwolawani do slowniczka

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -683,3 +683,14 @@
     description={Zarządzane przez Dockera magazyny danych dla kontenerów, które
     są odizolowane od maszyny hosta.}
 }
+
+\newglossaryentry{debounce}{
+    name={Debounce},
+    description={Technika programistyczna polegająca na ograniczaniu liczby wywołań funkcji poprzez jej uruchomienie dopiero po upływie zadanego czasu od ostatniego wyzwolenia zdarzenia.}
+}
+
+\newglossaryentry{mutacja}{
+    name={Mutacja},
+    description={Operacja polegająca na zmianie istniejącego stanu lub danych w miejscu, np. poprzez modyfikację pól obiektu zamiast tworzenia jego nowej kopii.}
+}
+
