changes after review

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -686,7 +686,7 @@
 
 \newglossaryentry{debounce}{
     name={Debounce},
-    description={Technika programistyczna polegająca na ograniczaniu liczby wywołań funkcji poprzez jej uruchomienie dopiero po upływie zadanego czasu od ostatniego wyzwolenia zdarzenia.}
+    description={Technika programistyczna polegająca na ograniczaniu liczby wywołań funkcji poprzez jej uruchomienie dopiero po upływie zadanego czasu od ostatniego wywołania.}
 }
 
 \newglossaryentry{mutacja}{
