--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -385,3 +385,22 @@
     Definicja została napisana na podstawie treści książki \cite{wzorce-projektowe}
     }
 }
+
+\newglossaryentry{ioc}{
+    name={IoC},
+    description={Inversion of Control (tłum. \textit{Odwrócenie kontroli}); paradygmat programowania, w którym kontrola nad
+    zarządzaniem obiektami i zależnościami przekazywana jest do zewnętrznego kontenera lub \glslink{framework}{frameworka}}
+}
+
+\newglossaryentry{bean}{
+    name={Bean},
+    description={To obiekt w \glslink{framework}{frameworku} \glslink{spring-framework}{Spring},
+    który jest tworzony i zarządzany przez kontener Spring \glslink{ioc}{IoC}}
+}
+
+\newglossaryentry{annotaion}{
+    name={Adnotacja},
+    description={To sposób dodania metadanych do kodu Java, nie zmieniają bezpośrednio działania programu, ale są wykorzystywane przez kompilator i
+    \glslink{framework}{frameworki}.
+    Zaczynają się symbolem \textit{@}}
+}
