Add tests descriptions

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -683,3 +683,9 @@
     description={Zarządzane przez Dockera magazyny danych dla kontenerów, które
     są odizolowane od maszyny hosta.}
 }
+
+\newglossaryentry{github-actions}{
+    name={GitHub Actions},
+    description={Usługa platformy GitHub umożliwiająca automatyzację procesów \gls{cicd}, takich jak budowanie projektu,
+    uruchamianie testów oraz wdrażanie aplikacji w odpowiedzi na zdarzenia w repozytorium (np. \textit{push} lub \textit{pull request}).}
+}
