Changes after review

--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -691,5 +691,7 @@
 
 \newglossaryentry{mutacja}{
     name={Mutacja},
-    description={Operacja polegająca na zmianie istniejącego stanu lub danych w miejscu, np. poprzez modyfikację pól obiektu zamiast tworzenia jego nowej kopii.}
+    description={W TanStack Query: asynchroniczna operacja modyfikująca stan danych po stronie serwera
+    (utworzenie/aktualizacja/usunięcie), zwykle realizowana wywołaniem API (POST/PUT/PATCH/DELETE);
+    przeciwieństwo zapytania (query) służącego do odczytu.}
 }
