--- a/book/glossary.tex
+++ b/book/glossary.tex
@@ -108,7 +108,7 @@
 \newglossaryentry{tanstack-query}
 {
     name={TanStack Query},
-    description={Biblioteka do obsługi zapytań do serwera i cachowania danych w aplikacjach frontendowych (m.in. React). Ułatwia zarządzanie stanem danych z backendu: pobieranie, odświeżanie, invalidację i obsługę błędów}
+    description={Biblioteka do obsługi zapytań do serwera i cachowania danych w aplikacjach frontendowych (m.in. React). Ułatwia zarządzanie stanem danych z backendu: pobieranie, odświeżanie i obsługę błędów}
 }
 
 \newglossaryentry{leaflet}
@@ -486,7 +486,7 @@
 \newglossaryentry{spa}
 {
     name={SPA},
-    description={SPA (Single Page Application) to aplikacja webowa, w której cała strona ładuje się raz,
+    description={Single Page Application to aplikacja webowa, w której cała strona ładuje się raz,
     a późniejsze zmiany widoku odbywają się dynamicznie po stronie przeglądarki bez pełnego przeładowania strony.}
 }
 
@@ -519,7 +519,7 @@
 \newglossaryentry{dockerfile}
 {
     name={Dockerfile},
-    description={Plik tekstowy zawierający instrukcje opisujące, jak zbudować obraz Dockera (jakiej podstawy użyć, jakie pliki skopiować, jakie polecenia uruchomić). Na jego podstawie narzędzie Docker tworzy gotowy obraz kontenera}
+    description={Plik tekstowy zawierający instrukcje opisujące, jak zbudować obraz Dockera (jakiej podstawy użyć, jakie pliki skopiować, jakie polecenia uruchomić). Na jego podstawie Docker tworzy gotowy obraz kontenera}
 }
 
 \newglossaryentry{redis}
