--- a/book/bibliography.bib
+++ b/book/bibliography.bib
@@ -30,7 +30,6 @@
     title = {Disciplined Agile Delivery},
     url = {https://www.pmi.org/disciplined-agile/process/introduction-to-dad/why},
     urldate = {2025-10-30},
-    date = {2025-01-01},
     organization = {PMI}
 }
 
@@ -47,42 +46,36 @@
     title = {Tailwind},
     url = {https://tailwindcss.com/},
     urldate = {2025-11-03},
-    date = {2025-01-01},
 }
 
 @online{tanstack-query,
     title = {Tanstack Query},
     url = {https://tanstack.com/query/latest},
     urldate = {2025-11-03},
-    date = {2025-01-01},
 }
 
 @online{axios,
     title = {Axios},
     url = {https://axios-http.com/},
     urldate = {2025-11-03},
-    date = {2025-01-01},
 }
 
 @online{motion,
     title = {Motion},
     url = {https://motion.dev/},
     urldate = {2025-11-03},
-    date = {2025-01-01},
 }
 
 @online{redux,
     title = {Redux},
     url = {https://redux.js.org/},
     urldate = {2025-11-03},
-    date = {2025-01-01},
 }
 
 @online{react-use-state,
     title = {React useState},
     url = {https://react.dev/reference/react/useState},
     urldate = {2025-11-03},
-    date = {2025-01-01},
 }
 
 @online{github-actions-billing,
@@ -90,7 +83,6 @@
     organization = {GitHub Docs},
     url = {https://docs.github.com/en/billing/managing-billing-for-github-actions/about-billing-for-github-actions},
     urldate = {2025-11-02},
-    date = {2024-01-01}
 }
 
 @online{azure-blob-scalability,
@@ -98,7 +90,6 @@
     organization = {Microsoft Learn},
     url = {https://learn.microsoft.com/azure/storage/blobs/scalability-targets},
     urldate = {2025-11-02},
-    date = {2024-01-01}
 }
 
 @online{mailtrap-limits,
@@ -106,7 +97,6 @@
     organization = {Mailtrap Docs},
     url = {https://help.mailtrap.io/article/111-what-are-the-limitations-in-mailtrap/},
     urldate = {2025-11-02},
-    date = {2024-01-01}
 }
 
 @online{locationiq-pricing,
@@ -114,7 +104,6 @@
     organization = {LocationIQ},
     url = {https://locationiq.com/pricing},
     urldate = {2025-11-02},
-    date = {2024-01-01}
 }
 
 @online{google-maps-urls,
@@ -122,7 +111,6 @@
     organization = {Google Maps},
     url = {https://developers.google.com/maps/documentation/urls/get-started?hl=pl},
     urldate = {2025-11-02},
-    date = {2024-01-01}
 }
 
 @online{openfreemap-docs,
@@ -130,7 +118,6 @@
     organization = {OpenFreeMap},
     url = {https://openfreemap.org/docs},
     urldate = {2025-11-02},
-    date = {2024-01-01}
 }
 
 @online{openfreemap-quickstart,
@@ -138,7 +125,6 @@
     organization = {OpenFreeMap},
     url = {https://openfreemap.org/docs/quick-start},
     urldate = {2025-11-02},
-    date = {2024-01-01}
 }
 
 @online{open-meteo-usage,
@@ -146,7 +132,6 @@
     organization = {Open-Meteo},
     url = {https://open-meteo.com/en/docs/usage-and-pricing},
     urldate = {2025-11-02},
-    date = {2024-01-01}
 }
 
 @online{tenor-docs,
@@ -154,7 +139,6 @@
     organization = {Tenor},
     url = {https://tenor.com/gifapi/documentation},
     urldate = {2025-11-02},
-    date = {2024-01-01}
 }
 
 @online{wheretheiss-docs,
@@ -162,7 +146,6 @@
     organization = {wheretheiss.at},
     url = {https://wheretheiss.at/},
     urldate = {2025-11-02},
-    date = {2024-01-01}
 }
 
 @book{uml-def,
@@ -170,7 +153,7 @@
     title = {Język UML 2.0 w modelowaniu systemów informatycznych},
     publisher = {Helion},
     isbn = {83-736-1892-9, 8373618929},
-    year ={2006},
+    year = {2006},
     location = {Warszawa}
 }
 
@@ -179,5 +162,40 @@
     author = {Michał Wolski},
     url = {https://wolski.pro/2024/05/10-wskazowek-poprawiajacych-modelowanie-procesow-biznesowych-w-notacji-bpmn/},
     urldate = {2025-11-19},
-    date = {2024-05-14},
 }
+
+@online{rfc6455,
+    title = {RFC 6455: The WebSocket Protocol},
+    organization = {IETF},
+    url = {https://datatracker.ietf.org/doc/html/rfc6455},
+    urldate = {2025-12-16}
+}
+
+@online{spring-websocket,
+    title = {WebSocket (Spring Framework Reference Documentation)},
+    organization = {Spring},
+    url = {https://docs.spring.io/spring-framework/reference/web/websocket.html},
+    urldate = {2025-12-16}
+}
+
+@online{spring-stomp,
+    title = {STOMP over WebSocket (Spring Framework Reference Documentation)},
+    organization = {Spring},
+    url = {https://docs.spring.io/spring-framework/reference/web/websocket/stomp.html},
+    urldate = {2025-12-16}
+}
+
+@online{sockjs-client,
+    title = {sockjs-client (WebSocket emulation --- JavaScript client)},
+    organization = {SockJS},
+    url = {https://github.com/sockjs/sockjs-client},
+    urldate = {2025-12-16}
+}
+
+@online{sockjs-protocol,
+    title = {SockJS Protocol 0.3.3},
+    organization = {SockJS},
+    url = {https://sockjs.github.io/sockjs-protocol/sockjs-protocol-0.3.3.html},
+    urldate = {2025-12-16}
+}
+
